2013-04-11  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.31

	* rpc.yppasswdd/Makefile.am: Fix link order.

2013-04-10  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.30

	* lib/yp_db.c: fixes for Tokyo Cabinet.
	* makedbm/makedbm.c: Likewise.
	* yphelper/yphelper.c: Likewise.
	* yppush/yppush.c: Likewise.
	* ypxfr/ypxfr.c: Likewise.
	* lib/pidfile.c: Close pidfile file descriptor on exit.
	* configure.in: Add AC_USE_SYSTEM_EXTENSIONS.

2013-04-09  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: check for systemd header/library.
	* lib/access.c: implement systemd notification.
	* lib/access.h: Likewise.
	* lib/Makefile.am: Likewise.
	* rpc.yppasswdd/Makefile.am: Likewise.
	* rpc.yppasswdd/yppasswdd.c: Likewise.
	* rpc.ypxfrd/Makefile.am: Likewise.
	* rpc.ypxfrd/ypxfrd.c: Likewise.
	* ypserv/Makefile.am: Likewise.
	* ypserv/ypserv.c: Likewise.

2012-08-30  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.29

	* rpc.yppasswdd/yppasswdd.c: Fix memory leak [bnc#777833].
	* rpc.ypxfrd/ypxfrd_svc.c: Likewise.
	* yppush/yppush.c: Likewise.
	Based on patch from Honza Horak <hhorak@redhat.com>.

2012-05-30  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.28

	* mknetid/mknetid.c (main): Handle empty group lines and broken
	group entries more graceful.
	Patch from Stefan Sydow <stsydow@cs.tu-berlin.de>.

	* configure.in: Add support for tokyocabinet.
	* lib/yp.h: Likewise.
	* lib/yp_db.c: Likewise.
	* lib/yp_db.h: Likewise.
	* lib/ypxfrd.h: Likewise.
	* lib/ypxfrd.x: Likewise.
	* makedbm/makedbm.c: Likewise.
	* rpc.ypxfrd/ypxfrd_server.c: Likewise.
	* yphelper/yphelper.c: Likewise.
	* yppush/yppush.c: Likewise.
	* ypxfr/ypxfr.c: Likewise.

	* rpc.yppasswdd/update.c: check crypt() ret value for
	NULL pointer, add support for passwd.adjunct.

	* rpc.yppasswdd/yppasswdd.c: check port value.
	* rpc.ypxfrd/ypxfrd.c: Likewise.
	* yppush/yppush.c: Likewise.
	* ypserv/ypserv.: Likewise.

	* scripts/ypinit.in: check for empty domainname.
