@@ -1,3 +1,8 @@
+2013-07-22  Thorsten Kukuk  <kukuk@suse.de>
+
+	* lib/ypserv_conf.c (load_ypserv_conf): Use int instead
+	of c because of fgetc/EOF.
+
 2013-04-11  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.31
